[project]
name = "github-summary"
version = "0.1.0"
description = "GitHub repository summarizer API"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.100.0,<0.115.0",
    "uvicorn[standard]>=0.22.0,<0.32.0",
    "anthropic>=0.30.0,<1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
